--- a/src/global.css
+++ b/src/global.css
@@ -29,7 +29,6 @@
 }
 
 html {
-	line-height: 1;
 	-webkit-text-size-adjust: 100%;
 	-moz-tab-size: 4;
 	-o-tab-size: 4;
@@ -39,27 +38,14 @@ html {
 		"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-/**
- * WHAT IS THIS FILE?
- *
- * Globally applied styles. No matter which components are in the page or matching route,
- * the styles in here will be applied to the Document, without any sort of CSS scoping.
- *
- */
-html {
-	-webkit-text-size-adjust: 100%;
-	-moz-tab-size: 4;
-	-o-tab-size: 4;
-	tab-size: 4;
-	font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-		"Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-		"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+body::-webkit-scrollbar-track {
+	background: black;
 }
 
 body {
 	padding: 0;
 	line-height: inherit;
-  padding: 0;
+	padding: 0;
 	margin: 0;
 	line-height: inherit;
 	background-image: linear-gradient(
