--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -2,111 +2,97 @@
 
 /* SHELL ---------------------------------------- */
 html {
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+		"Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+		"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 /* HEADINGS ------------------------------------- */
 h1,
 h2,
 h3 {
-  color: white;
-  margin: 0;
+	color: white;
+	margin: 0;
 }
 
 h1 {
-  font-size: 3.2rem;
-  text-align: center;
+	font-size: 3.2rem;
+	text-align: center;
 }
 h1 .highlight,
 h3 .highlight {
-  color: var(--qwik-light-blue);
+	color: var(--qwik-light-blue);
 }
 
 h2 {
-  font-weight: 400;
-  font-size: 2.4rem;
+	font-weight: 400;
+	font-size: 2.4rem;
 }
 h2 .highlight {
-  font-weight: 700;
+	font-weight: 700;
 }
 
 h3 {
-  font-size: 2rem;
+	font-size: 2rem;
 }
 
 @media screen and (min-width: 768px) {
-  h1 {
-    font-size: 5rem;
-  }
-  h2 {
-    font-size: 3.4rem;
-  }
-  h3 {
-    font-size: 3rem;
-  }
+	h1 {
+		font-size: 5rem;
+	}
+	h2 {
+		font-size: 3.4rem;
+	}
+	h3 {
+		font-size: 3rem;
+	}
 }
 
 /* TAGS ----------------------------------------- */
 a {
-  text-decoration: none;
-  color: var(--qwik-light-blue);
+	text-decoration: none;
+	/* color: var(--qwik-light-blue); */
 }
 
 code {
-  background: rgba(230, 230, 230, 0.3);
-  border-radius: 4px;
-  padding: 2px 6px;
+	background: rgba(230, 230, 230, 0.3);
+	border-radius: 4px;
+	padding: 2px 6px;
 }
 
 ul {
-  margin: 0;
-  padding-left: 20px;
+	margin: 0;
+	padding-left: 20px;
 }
 
 @media screen and (min-width: 768px) {
-  .container {
-    padding: 50px 80px;
-  }
-  .container.container-spacing-xl {
-    padding: 100px 60px;
-  }
-  .container.container-flex {
-    display: flex;
-    justify-content: center;
-    gap: 60px;
-  }
+	.container {
+		padding: 50px 80px;
+	}
+	.container.container-spacing-xl {
+		padding: 100px 60px;
+	}
+	.container.container-flex {
+		display: flex;
+		justify-content: center;
+		gap: 60px;
+	}
 }
 
 /* BUTTONS -------------------------------------- */
 a.button,
 button {
-  background: var(--qwik-light-blue);
-  border: none;
-  border-radius: 8px;
-  color: white;
-  cursor: pointer;
-  font-size: 0.8rem;
-  padding: 15px 20px;
-  text-align: center;
+	/* background: var(--qwik-light-blue); */
+	/* border: none; */
+	/* border-radius: 8px; */
+	color: white;
+	cursor: pointer;
+	/* font-size: 0.8rem; */
+	/* padding: 15px 20px; */
+	text-align: center;
 }
 
 a.button.button-dark,
 button.button-dark {
-  background: var(--qwik-dirty-black);
+	/* background: var(--qwik-dirty-black); */
 }
-
-a.button.button-small,
-button.button-small {
-  padding: 15px 25px;
-}
-
-@media screen and (min-width: 768px) {
-  a.button,
-  button {
-    font-size: 1rem;
-    padding: 23px 35px;
-  }
-}
-
