--- a/src/global.css
+++ b/src/global.css
@@ -6,6 +6,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'grotesk';
+  src: url('/public/fonts/grotesk/AlteHaasGroteskRegular.ttf');
+}
+@font-face {
+  font-family: 'inter';
+  src: url('/public/fonts/Inter/static/Inter-Regular.ttf');
+}
+@font-face {
+  font-family: 'poppins';
+  src: url('/public/fonts/poppins-400.woff2');
+}
 /**
  * WHAT IS THIS FILE?
  *
@@ -33,7 +45,7 @@ html {
 	-moz-tab-size: 4;
 	-o-tab-size: 4;
 	tab-size: 4;
-	font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+	font-family: poppins, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
 		"Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
 		"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
