--- a/src/global.css
+++ b/src/global.css
@@ -45,7 +45,7 @@ html {
 	-moz-tab-size: 4;
 	-o-tab-size: 4;
 	tab-size: 4;
-	font-family: poppins, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+	font-family: inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
 		"Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
 		"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
