--- a/src/global.css
+++ b/src/global.css
@@ -35,6 +35,7 @@
 	--qwik-dirty-black: #1d2033;
 	--qwik-dark-background: #151934;
 	--qwik-dark-text: #ffffff;
+  --secondary: hsl(182, 39%, 47%);
 	/* Cursor */
 	--cursor-stroke: none;
 	/* --cursor-fill: #18b6f6; */
